--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -31,7 +31,7 @@
     "from pprint import pprint\n",
     "\n",
     "# Impor the OpenWeatherMap API key\n",
-    "from api_keys import weather_api_key\n",
+    "from apikeys import weather_api_key\n",
     "\n",
     "# Import citipy to determine the cities based on latitude and longitude\n",
     "from citipy import citipy"
